# fractol

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  mandelbrot.py  ref.sh
debug/: print_params.c  test.c
includes/: colors.h  defines.h  errors.h  fractol.h  key_codes.h  structs.h
libft/: Makefile
libft/includes/: libft.h
libft/src_memory/: ft_memset.c
libft/src_string/: ft_readfile.c  ft_strstr.c
sources/: calc_mandel.cl  cl_gnl.c  cl_mandelbrot.cl  complex_math.c  error.c  fractol.c  gpu_julia.cl  gpu_mandelbrot.cl  hooks.c  hooks_julia.c  hooks_mandelbrot.c  image.c  init.c  julia.c  jumps.c  mandelbrot.c  opencl_utils.c  terminal.c  thrash.cl
sources/fractals/: julia.c  jumps.c  mandelbrot.c  triangle.c
sources/hooks/: hooks.c  hooks_julia.c  hooks_mandelbrot.c  hooks_triangle.c
sources/open_cl/: cl_gnl.c  cl_render.c  clean_opencl.c  gpu_julia.cl  gpu_mandelbrot.cl  opencl_utils.c
sources/terminal/: parse_term_input.c  term_processor.c  term_string_utils.c  terminal.c
sources/utils/: bresenham.c  complex_math.c  error.c  exit_clean.c  image.c  init.c  rotation.c  screen_info.c
